--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,8 @@
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.11.0-M2</version>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.10.0</version> <!-- Use the latest stable version -->
         </dependency>
         <dependency>
             <groupId>org.apache.pdfbox</groupId>
